--- a/sobre.html
+++ b/sobre.html
@@ -20,7 +20,25 @@
     </header>
     <main>
         <section>
-            <h1>Sobre</h1>
+            <div class="sobre">
+                <p>Meu nome é <strong class="sobre__forte">Eliane Cristina</strong>, sou </p>
+                
+                <p><strong class="sobre__forte"> Desenvolvedora Web Full Stack Júnior.</strong></p>
+
+                <p>Para conhecer meu portifólio você pode acessar os links abaixo.</p>
+
+                <div class="redes">
+
+                <a href="https://github.com/ElianeCristina">
+                    <img src="./img/icons8-github-48.png" alt="icone do github">
+                </a>
+
+                <a href="https://www.linkedin.com/in/eliane-cristina-nunes-correia/">
+                    <img src="./img/icons8-linkedin-48.png" alt="icone do linkedin">
+                </a>
+
+                </div>
+            </div>
         </section>
     </main>
 
